@@ -11,6 +11,7 @@
 #include "pool.h"
 
 struct lease;
+struct async_operation_ref;
 
 typedef void (*delegate_callback_t)(int fd, void *ctx);
 
@@ -22,6 +23,7 @@ typedef void (*delegate_callback_t)(int fd, void *ctx);
 void
 delegate_open(int fd, const struct lease *lease, void *lease_ctx,
               pool_t pool, const char *path,
-              delegate_callback_t callback, void *ctx);
+              delegate_callback_t callback, void *ctx,
+              struct async_operation_ref *async_ref);
 
 #endif
